--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - "4566:4566"   # LocalStack gateway
       - "4571:4571"   # DynamoDB specific port
     volumes:
-      - dynamodb_data:/tmp/localstack
-      - /var/run/docker.sock:/var/run/docker.sock
+      - "./.localstack:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - otel-network
     healthcheck:
