feat: Convert to DynamoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,10 @@ quarkus.application.name=otel-motel
 # DynamoDB Configuration
 quarkus.dynamodb.endpoint-override=http://localhost:4566
 quarkus.dynamodb.aws.region=us-east-1
+quarkus.dynamodb.region=us-east-1
+
 quarkus.dynamodb.aws.credentials.type=static
+dynamodb.aws.credentials.static-provider.type=static
 quarkus.dynamodb.aws.credentials.static-provider.access-key-id=test
 quarkus.dynamodb.aws.credentials.static-provider.secret-access-key=test
 
@@ -13,7 +16,8 @@ quarkus.otel.exporter.otlp.endpoint=http://localhost:4318
 quarkus.otel.exporter.otlp.protocol=http/protobuf
 
 # Enable tracing
-quarkus.otel.traces.enabled=true
+# quarkus.otel.traces.enabled is deprecated; use quarkus.opentelemetry.enabled instead or remove if not needed
+# quarkus.otel.traces.enabled=true
 quarkus.otel.traces.sampler=always_on
 
 # Enable metrics
@@ -26,7 +30,7 @@ quarkus.otel.logs.enabled=true
 quarkus.otel.resource.attributes=service.name=otel-motel,service.version=1.0-SNAPSHOT,deployment.environment=dev
 
 # Logging Configuration - ECS JSON format for Elasticsearch
-quarkus.log.console.json=true
+quarkus.log.console.json.enabled=true
 quarkus.log.console.json.pretty-print=false
 quarkus.log.level=INFO
 quarkus.log.category."com.johnnyb".level=DEBUG
