--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.27.0</quarkus.platform.version>
-        <aws.sdk.version>2.20.26</aws.sdk.version>
+        <quarkus.platform.version>3.25.4</quarkus.platform.version>
+        <aws.sdk.version>2.20.8</aws.sdk.version>
         <lombok.version>1.18.34</lombok.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.5.3</surefire-plugin.version>
@@ -59,6 +59,10 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>dynamodb-enhanced</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>url-connection-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
