--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,7 @@ quarkus.otel.resource.attributes=service.name=otel-motel,service.version=1.0-SNA
 
 # Logging Configuration - ECS JSON format for Elasticsearch
 quarkus.log.console.json.enabled=true
+quarkus.log.console.json.log-format=ecs
 quarkus.log.console.json.pretty-print=false
 quarkus.log.level=INFO
 quarkus.log.category."com.johnnyb".level=DEBUG
